PHOENIX-6327 Consolidate Junit test categories (addendum: restore JVM/GC tuning parameters)